[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/SudokuBackground.png" type="Texture" id=1]
[ext_resource path="res://Scenes/NumberButtons.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/MainScreen.gd" type="Script" id=11]

[node name="MainScreen" type="Node2D"]
script = ExtResource( 11 )

[node name="Screen" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 1024.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="TextureRect" parent="Screen"]
margin_right = 576.0
margin_bottom = 576.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="Panel" parent="."]
modulate = Color( 0, 0, 0, 0 )
margin_left = 128.0
margin_top = 128.0
margin_right = 704.0
margin_bottom = 704.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberButtons" parent="." instance=ExtResource( 2 )]

[node name="Button" type="Button" parent="."]
margin_left = 754.027
margin_top = 808.939
margin_right = 986.027
margin_bottom = 896.939
text = "Solve Sudoku"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="."]
margin_left = 753.306
margin_top = 127.35
margin_right = 985.306
margin_bottom = 190.35
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="."]
margin_left = 757.623
margin_top = 259.016
margin_right = 989.623
margin_bottom = 322.016
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New" type="Button" parent="."]
margin_left = 755.465
margin_top = 384.207
margin_right = 987.465
margin_bottom = 447.207
text = "New"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlaySolve" type="Button" parent="."]
margin_left = 755.465
margin_top = 511.557
margin_right = 987.465
margin_bottom = 574.557
text = "Play solution"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Temp" type="Button" parent="."]
margin_left = 755.465
margin_top = 636.748
margin_right = 987.465
margin_bottom = 699.748
text = "Show possible"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LayerFiles" type="CanvasLayer" parent="."]
layer = 50

[node name="SaveDialog" type="FileDialog" parent="LayerFiles"]
margin_left = 16.7924
margin_top = 222.317
margin_right = 1015.79
margin_bottom = 667.317
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadDialog" type="FileDialog" parent="LayerFiles"]
margin_left = 12.0
margin_top = 259.0
margin_right = 1011.0
margin_bottom = 664.0
window_title = "Open a File"
mode = 0
[connection signal="mouse_entered" from="GridContainer" to="." method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer" to="." method="_on_Panel_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="PlaySolve" to="." method="_on_PlaySolve_pressed"]
[connection signal="pressed" from="Temp" to="." method="_on_Temp_pressed"]
[connection signal="file_selected" from="LayerFiles/SaveDialog" to="." method="_on_SaveDialog_file_selected"]
[connection signal="file_selected" from="LayerFiles/LoadDialog" to="." method="_on_LoadDialog_file_selected"]
